cabal-version:      3.4
name:               import-plugin-poc
version:            0.0.1
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             NeoHaskell Contributors
maintainer:         importplugin@nickseagull.dev
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite import-plugin-poc-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        import-plugin-poc
